backend/deployments/k8s/tvseries-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tvseries-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tvseries-service
  template:
    metadata:
      labels:
        app: tvseries-service
    spec:
      containers:
        - name: tvseries-service
          image: tvseries-service:latest
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: tvseries-service
spec:
  selector:
    app: tvseries-service
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
