backend/deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: move-streem-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8081
          - path: /movie
            pathType: Prefix
            backend:
              service:
                name: movie-service
                port:
                  number: 8080
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8082
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 8083
          - path: /genres
            pathType: Prefix
            backend:
              service:
                name: genres-service
                port:
                  number: 8084
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8085
          - path: /tvseries
            pathType: Prefix
            backend:
              service:
                name: tvseries-service
                port:
                  number: 8086
